[gd_scene load_steps=9 format=3 uid="uid://e8ab28jrcktx"]

[ext_resource type="Script" path="res://scenes/blackjack/CardDeck.gd" id="1_nv53f"]
[ext_resource type="Script" path="res://scenes/blackjack/blackjack.gd" id="1_vlvme"]
[ext_resource type="Texture2D" uid="uid://dsk5mum376ltk" path="res://assets/cards/card_back.png" id="2_el1im"]
[ext_resource type="Script" path="res://scenes/blackjack/BlackjackButton.gd" id="3_5mqem"]
[ext_resource type="Script" path="res://scenes/blackjack/HitButton.gd" id="4_f5erp"]
[ext_resource type="Script" path="res://scenes/blackjack/StandButton.gd" id="5_j5esw"]
[ext_resource type="Script" path="res://scenes/blackjack/QuitButton.gd" id="6_ng6vh"]
[ext_resource type="AudioStream" uid="uid://csschlps4tvid" path="res://audio/BlackjackBgm.ogg" id="8_m4nwi"]

[node name="blackjack" type="CanvasLayer"]
script = ExtResource("1_vlvme")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.564706, 0.145098, 1)

[node name="CardDeck" type="Area2D" parent="."]
script = ExtResource("1_nv53f")

[node name="Sprite2D" type="Sprite2D" parent="CardDeck"]
z_index = 1
position = Vector2(150, 260)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_el1im")

[node name="BlackjackButton" type="Button" parent="."]
offset_left = 79.0
offset_top = 450.0
offset_right = 199.0
offset_bottom = 510.0
text = "开始"
script = ExtResource("3_5mqem")

[node name="HitButton" type="Button" parent="."]
offset_left = 80.0
offset_top = 530.0
offset_right = 200.0
offset_bottom = 590.0
text = "要牌"
script = ExtResource("4_f5erp")

[node name="StandButton" type="Button" parent="."]
offset_left = 460.0
offset_top = 362.0
offset_right = 580.0
offset_bottom = 422.0
text = "停牌"
script = ExtResource("5_j5esw")

[node name="QuitButton" type="Button" parent="."]
offset_left = 80.0
offset_top = 610.0
offset_right = 200.0
offset_bottom = 670.0
text = "离开"
script = ExtResource("6_ng6vh")

[node name="ResultLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 2
vertical_alignment = 2

[node name="PlayerScoreDisplay" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="PlayerHand" type="Node2D" parent="."]

[node name="Card1" type="Sprite2D" parent="PlayerHand"]

[node name="Card2" type="Sprite2D" parent="PlayerHand"]

[node name="Card3" type="Sprite2D" parent="PlayerHand"]

[node name="Card4" type="Sprite2D" parent="PlayerHand"]

[node name="Card5" type="Sprite2D" parent="PlayerHand"]

[node name="Battle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_m4nwi")
volume_db = -10.0

[node name="CardDisplay" type="Sprite2D" parent="."]
position = Vector2(350, 260)

[node name="DealerHand" type="Node2D" parent="."]

[node name="Card1" type="Sprite2D" parent="DealerHand"]

[node name="Card2" type="Sprite2D" parent="DealerHand"]

[node name="Card3" type="Sprite2D" parent="DealerHand"]

[node name="Card4" type="Sprite2D" parent="DealerHand"]

[node name="Card5" type="Sprite2D" parent="DealerHand"]
